--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,8 +1,4 @@
 .navbar {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-
   background-color: #020617;
   border-bottom: 1px solid #1e293b;
 }
@@ -20,11 +16,27 @@
 
 /* Logo */
 .navbar__logo {
-  font-size: 1.3rem;
-  font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: 700;
   color: #f8fafc;
   text-decoration: none;
 }
+
+.navbar__toggle{
+  display: none;
+  background: none;
+  border: none;
+  color: #f8fafc;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.navbar__menu{
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
 
 /* Links */
 .navbar__links {
@@ -33,7 +45,7 @@
 }
 
 .navbar__link {
-  color: #94a3b8;
+  color: #cbd5f5;
   text-decoration: none;
   font-size: 0.95rem;
   transition: color 0.2s;
@@ -53,26 +65,26 @@
 .navbar__auth {
   display: flex;
   align-items: center;
-  gap: 14px;
+  gap: 16px;
 }
 
 .navbar__user {
   font-size: 0.9rem;
-  color: #cbd5f5;
+  color: #94a3b8;
 }
 
 /* Botones */
 .btn {
   padding: 8px 14px;
-  border-radius: 8px;
+  border-radius: 6px;
   border: none;
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 
 .btn--primary {
-  background-color: #3b82f6;
-  color: white;
+  background-color: #2563eb;
+  color: #fff;
 }
 
 .btn--primary:hover {
@@ -87,4 +99,43 @@
 
 .btn--logout:hover {
   background-color: rgba(248, 113, 113, 0.1);
+}
+/*Movile*/
+
+@media(max-width: 768px){
+  .navbar__toggle{
+    display: block;
+  }
+
+  .navbar__menu{
+    position: absolute;
+    top: 64px;
+
+    width:90%;
+
+    background-color: #020617;
+    border-top: 1px solid #1e293b;
+
+    flex-direction: column;
+
+
+    padding: 10px;
+    display: none;
+    border: 0;
+  }
+
+  .navbar__menu.is-open{
+    display: flex;
+  }
+
+  .navbar__link{
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .navbar__auth{
+    margin-top: 16px;
+    flex-direction: column;
+    gap: 12px;
+  }
 }
