--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,6 +1,8 @@
 .navbar {
   background-color: #020617;
   border-bottom: 1px solid #1e293b;
+  position: relative;
+  z-index: 1000;
 }
 
 .navbar__container {
@@ -110,18 +112,16 @@
   .navbar__menu{
     position: absolute;
     top: 64px;
-
-    width:90%;
-
+    width:100%;
+    left: 0;
     background-color: #020617;
     border-top: 1px solid #1e293b;
-
+    border-bottom: 1px solid #1e293b;
     flex-direction: column;
-
-
-    padding: 10px;
+    padding: 20px;
     display: none;
     border: 0;
+    z-index: 999;
   }
 
   .navbar__menu.is-open{
