--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -139,3 +139,24 @@
     gap: 12px;
   }
 }
+/*tamaño de ico */
+.navbar__logo-img {
+  height: 80px; 
+  width: auto;
+  object-fit: contain;
+  transition: transform 0.2s;
+}
+
+/* Evita que el Navbar crezca demasiado por la imagen (ico) */
+.navbar__container {
+  height: 70px; 
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.navbar__logo {
+  display: flex;
+  align-items: center;
+  align-self: center; /* Centra verticalmente en el nav */
+}
